# raytracer-rs

./: Cargo.toml  README.md
src/: angle.rs  color.rs  consts.rs  direction.rs  game.rs  main.rs  player.rs  ray.rs  vec2d.rs
src/world/: entity.rs  mod.rs  render.rs  tile.rs
