[package]
name = "raytrace-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Piston
piston = "0.53.0"
# Implementation for a Window with Glutin
pistoncore-glutin_window = "0.70.1"
# Graphics API
piston2d-graphics = "0.43.0"
# Implementation for the Graphics API with opengl
piston2d-opengl_graphics = "0.82.0"

# A small library with a map where the key is a usize
slab = "0.4.7"

# Crate for converting numbers
conv = "0.3.3"